--- a/england_pillar1_config.yaml
+++ b/england_pillar1_config.yaml
@@ -2,29 +2,26 @@
 
 ProcessData:
   date_range:
-    - 2020-10-09
-    - 2021-01-01
+    - 2020-11-20
+    - 2021-02-12
   mobility_matrix: data/mergedflows.csv
   population_size: data/c2019modagepop.csv
   commute_volume:   # Can be replaced by DfT traffic flow data - contact authors <c.jewell@lancaster.ac.uk>
 
   CasesData:
-    input: url
-    address: https://api.coronavirus.data.gov.uk/v2/data?areaType=ltla&metric=newCasesBySpecimenDate&format=json
-#    address: /home/hpc/39/jewellcp/Projects/covid-production-pipeline/data/cases_2021-04-12_uk.csv
-    pillars: None  # Capability to filter Pillar 1 and 2 testing data from PHE confidential line listing
-    measure: None  # Capability to filter date of test report from PHE confidential line listing
-    format: gov
+    input: csv
+    address: data/Anonymised Combined Line List 20210419.csv
+    pillars:
+      - Pillar 1  # Capability to filter Pillar 1 and 2 testing data from PHE confidential line listing
+    measure: specimen  # Capability to filter date of test report from PHE confidential line listing
+    format: phe
  
   AreaCodeData:
     input: json
     address:  "https://services1.arcgis.com/ESMARspQHYMw9BZ9/arcgis/rest/services/LAD_APR_2019_UK_NC/FeatureServer/0/query?where=1%3D1&outFields=LAD19CD,LAD19NM&returnGeometry=false&returnDistinctValues=true&orderByFields=LAD19CD&outSR=4326&f=json"
     format: ons
     regions:
-      - S  # Scotland
       - E  # England
-      - W  # Wales
-      - N # Northern Ireland
 
 Mcmc:
   dmax: 84  # Max distance to move events
@@ -44,7 +41,3 @@ ThinPosterior:  # Post-process further chain thinning HDF5 -> .pkl.
 Geopackage:  # covid.tasks.summary_geopackage
   base_geopackage: data/UK2019mod_pop.gpkg
   base_layer: UK2019mod_pop_xgen
-
-AWSS3:
-  bucket: lancaster-covid-pipeline
-  profile: covid-pipeline
