--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,15 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.7"
-covid19uk = {git = "git@fhm-chicas-code.lancs.ac.uk:jewell/covid19uk.git", rev="65bd815"}
+covid19uk = {git = "git@fhm-chicas-code.lancs.ac.uk:jewell/covid19uk.git", rev="d9c52e4eee49d9befd97db60cca1c58835a73dbd"}
 drmaa = "^0.7.9"
+jupyter = "^1.0.0"
+xarray = {extras = ["netcdf4"], version = "^0.17.0"}
+s3fs = "^0.5.2"
+jupyterlab = "^3.0.12"
+ipympl = "^0.6.3"
+zarr = "^2.7.0"
+hide-code = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.20.0"
