--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "covid-production-pipeline"
+name = "covid-pipeline"
 version = "0.1.0"
 description = "COVID19 daily production"
 authors = ["Chris Jewell <c.jewell@lancaster.ac.uk>"]
@@ -7,21 +7,22 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.7"
-covid19uk = {git = "git@fhm-chicas-code.lancs.ac.uk:jewell/covid19uk.git", rev="d9c52e4eee49d9befd97db60cca1c58835a73dbd"}
-drmaa = "^0.7.9"
-jupyter = "^1.0.0"
 xarray = {extras = ["netcdf4"], version = "^0.17.0"}
-s3fs = "^0.5.2"
-jupyterlab = "^3.0.12"
-ipympl = "^0.6.3"
-zarr = "^2.7.0"
-hide-code = "^0.6.0"
+s3fs = "^2021.04.0"
+covid19uk = {path = "../covid19uk", develop=true}
+ruffus = "^2.8.4"
+openpyxl = "^3.0.7"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.20.0"
 jedi = "^0.17.2"
 flake8 = "^3.8.4"
 black = "^20.8b1"
+hide-code = "^0.6.0"
+jupyter = "^1.0.0"
+zarr = "^2.7.0"
+jupyterlab = "^3.0.12"
+ipympl = "^0.6.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
