--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ license = "MIT"
 python = "^3.7"
 xarray = {extras = ["netcdf4"], version = "^0.17.0"}
 s3fs = "^2021.04.0"
-covid19uk = {path = "../covid19uk", develop=true}
+covid19uk = {git = "https://github.com/chrism0dwk/covid19uk.git", rev = "v0.7.4"}
 ruffus = "^2.8.4"
 openpyxl = "^3.0.7"
 
