--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ s3fs = "^2021.04.0"
 covid19uk = {git = "https://github.com/chrism0dwk/covid19uk.git", rev = "v0.7.4"}
 ruffus = "^2.8.4"
 openpyxl = "^3.0.7"
+matplotlib = "^3.4.1"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.20.0"
