--- a/uk_config.yaml
+++ b/uk_config.yaml
@@ -7,11 +7,11 @@ ProcessData:
   mobility_matrix: data/mergedflows.csv
   population_size: data/c2019modagepop.csv
   commute_volume:   # Can be replaced by DfT traffic flow data - contact authors <c.jewell@lancaster.ac.uk>
-
+  geopackage: data/UK2019mod_pop.gpkg
+  
   CasesData:
     input: url
     address: https://api.coronavirus.data.gov.uk/v2/data?areaType=ltla&metric=newCasesBySpecimenDate&format=json
-#    address: /home/hpc/39/jewellcp/Projects/covid-production-pipeline/data/cases_2021-04-12_uk.csv
     pillars: None  # Capability to filter Pillar 1 and 2 testing data from PHE confidential line listing
     measure: None  # Capability to filter date of test report from PHE confidential line listing
     format: gov
@@ -28,23 +28,30 @@ ProcessData:
 
 Mcmc:
   dmax: 84  # Max distance to move events
-  nmax: 50  # Max num events per metapopulation/time to move
+  nmax: 25  # Max num events per metapopulation/time to move
   m: 1      # Number of metapopulations to move
-  occult_nmax: 15  # Max number of occults to add/delete per metapop/time
-  num_event_time_updates: 35  # Num event and occult updates per sweep of Gibbs MCMC sampler.
-  num_bursts: 200  # Number of MCMC bursts of `num_burst_samples` 
+  occult_nmax: 8  # Max number of occults to add/delete per metapop/time
+  num_event_time_updates: 380  # Num event and occult updates per sweep of Gibbs MCMC sampler.
+  num_bursts: 100  # Number of MCMC bursts of `num_burst_samples` 
   num_burst_samples: 50  # Number of MCMC samples per burst
   thin: 20  # Thin MCMC samples every `thin` iterations
+  num_adaptation_iterations: 1000
+
 
 ThinPosterior:  # Post-process further chain thinning HDF5 -> .pkl.
-  start: 6000
-  end: 10000
-  by: 10
+  start: 3000 
+  end:
+  by: 4
 
 Geopackage:  # covid.tasks.summary_geopackage
   base_geopackage: data/UK2019mod_pop.gpkg
   base_layer: UK2019mod_pop_xgen
 
 AWSS3:
-  bucket: lancaster-covid-pipeline
   profile: covid-pipeline
+  bucket: lancaster-covid-devel
+
+S3:
+  profile: covid-pipeline-data
+  bucket: covid-pipeline-data
+  endpoint_url: https://fhm-chicas-storage.lancs.ac.uk
