--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "covid-pipeline"
-version = "0.1.0"
+version = "0.1.1-alpha.0"
 description = "COVID19 daily production"
 authors = ["Chris Jewell <c.jewell@lancaster.ac.uk>"]
 license = "MIT"
@@ -9,7 +9,7 @@ license = "MIT"
 python = "^3.7"
 xarray = {extras = ["netcdf4"], version = "^0.17.0"}
 s3fs = "^2021.04.0"
-covid19uk = {git = "https://github.com/chrism0dwk/covid19uk.git", rev = "v0.7.4"}
+covid19uk = {git = "https://github.com/chrism0dwk/covid19uk.git", tag = "v0.8.0-alpha0"}
 ruffus = "^2.8.4"
 openpyxl = "^3.0.7"
 matplotlib = "^3.4.1"
