--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,21 +9,22 @@ license = "MIT"
 python = "^3.7"
 xarray = {extras = ["netcdf4"], version = "^0.17.0"}
 s3fs = "^2021.04.0"
-covid19uk = {git = "https://github.com/chrism0dwk/covid19uk.git", rev = "v0.7.4"}
+covid19uk = {git = "https://github.com/chrism0dwk/covid19uk.git", tag="v0.8.0-alpha0"}
 ruffus = "^2.8.4"
 openpyxl = "^3.0.7"
 matplotlib = "^3.4.1"
 
 [tool.poetry.dev-dependencies]
-ipython = "^7.20.0"
 jedi = "^0.17.2"
 flake8 = "^3.8.4"
 black = "^20.8b1"
 hide-code = "^0.6.0"
-jupyter = "^1.0.0"
 zarr = "^2.7.0"
 jupyterlab = "^3.0.12"
 ipympl = "^0.6.3"
+descartes = "^1.1.0"
+seaborn = "^0.11.1"
+ipython = "^7.23.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
