--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ ruffus = "^2.8.4"
 openpyxl = "^3.0.7"
 matplotlib = "^3.4.1"
 descartes = "^1.1.0"
+enum34 = "1.1.8"
 
 [tool.poetry.dev-dependencies]
 jedi = "^0.17.2"
@@ -26,6 +27,10 @@ ipympl = "^0.6.3"
 descartes = "^1.1.0"
 seaborn = "^0.11.1"
 ipython = "^7.23.1"
+
+[tool.black]
+line-length = 80
+include = '\.pyi?$'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
