--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,13 @@ license = "MIT"
 python = "^3.7"
 xarray = {extras = ["netcdf4"], version = "^0.17.0"}
 s3fs = "^2021.04.0"
-covid19uk = {git = "https://github.com/chrism0dwk/covid19uk.git", tag="v0.8.0-alpha1"}
+covid19uk = {git = "https://github.com/chrism0dwk/covid19uk.git", tag="v0.8.0-alpha.3"}
 ruffus = "^2.8.4"
 openpyxl = "^3.0.7"
 matplotlib = "^3.4.1"
 descartes = "^1.1.0"
 enum34 = "1.1.8"
+mapclassify = "^2.4.2"
 
 [tool.poetry.dev-dependencies]
 jedi = "^0.17.2"
