--- a/england_pillar1_config.yaml
+++ b/england_pillar1_config.yaml
@@ -11,7 +11,7 @@ ProcessData:
   
   CasesData:
     input: csv
-    address: data/Anonymised Combined Line List 20210426.csv
+    address: data/latest_line_list.zip
     pillars:
       - Pillar 1  # Capability to filter Pillar 1 and 2 testing data from PHE confidential line listing
     measure: specimen  # Capability to filter date of test report from PHE confidential line listing
@@ -31,14 +31,14 @@ Mcmc:
   occult_nmax: 15  # Max number of occults to add/delete per metapop/time
   num_event_time_updates: 380  # Num event and occult updates per sweep of Gibbs MCMC sampler.
   num_bursts: 100  # Number of MCMC bursts of `num_burst_samples` 
-  num_burst_samples: 50  # Number of MCMC samples per burst
+  num_burst_samples: 200  # Number of MCMC samples per burst
   thin: 20  # Thin MCMC samples every `thin` iterations
   num_adaptation_iterations: 1000
 
 ThinPosterior:  # Post-process further chain thinning HDF5 -> .pkl.
-  start: 3000
+  start: -10000
   end: 
-  by: 4
+  by: 10
 
 Geopackage:  # covid.tasks.summary_geopackage
   base_geopackage: data/UK2019mod_pop.gpkg
