Automation and configuration improvements
CHANGES:

1. Lancaster CC risk report integrated into pipeline;
2. DSTL Scotland estimates adaptor code incorporated;
3. Update to covid19uk v0.8.0-alpha.5

--- a/england_pillar1_config.yaml
+++ b/england_pillar1_config.yaml
@@ -34,7 +34,10 @@ Mcmc:
   num_burst_samples: 200  # Number of MCMC samples per burst
   thin: 20  # Thin MCMC samples every `thin` iterations
   num_adaptation_iterations: 1000
-
+  initial_rates:
+    ei: 0.5
+    ir: 0.37
+    
 ThinPosterior:  # Post-process further chain thinning HDF5 -> .pkl.
   start: -10000
   end: 
