--- a/uk_config.yaml
+++ b/uk_config.yaml
@@ -18,7 +18,7 @@ ProcessData:
  
   AreaCodeData:
     input: json
-    address:  "https://services1.arcgis.com/ESMARspQHYMw9BZ9/arcgis/rest/services/LAD_APR_2019_UK_NC/FeatureServer/0/query?where=1%3D1&outFields=LAD19CD,LAD19NM&returnGeometry=false&returnDistinctValues=true&orderByFields=LAD19CD&outSR=4326&f=json"
+    address: "https://services1.arcgis.com/ESMARspQHYMw9BZ9/arcgis/rest/services/LAD_DEC_2019_UK_NC/FeatureServer/0/query?where=1%3D1&objectIds=&time=&resultType=none&outFields=LAD19CD,LAD19NM&returnIdsOnly=false&returnUniqueIdsOnly=false&returnCountOnly=false&returnDistinctValues=false&cacheHint=false&orderByFields=&groupByFieldsForStatistics=&outStatistics=&having=&resultOffset=&resultRecordCount=&sqlFormat=none&f=pjson&token="
     format: ons
     regions:
       - S  # Scotland
@@ -30,15 +30,15 @@ Mcmc:
   dmax: 84  # Max distance to move events
   nmax: 25  # Max num events per metapopulation/time to move
   m: 1      # Number of metapopulations to move
-  occult_nmax: 16  # Max number of occults to add/delete per metapop/time
+  occult_nmax: 32  # Max number of occults to add/delete per metapop/time
   num_event_time_updates: 380  # Num event and occult updates per sweep of Gibbs MCMC sampler.
-  num_bursts: 100  # Number of MCMC bursts of `num_burst_samples` 
+  num_bursts: 200  # Number of MCMC bursts of `num_burst_samples` 
   num_burst_samples: 200  # Number of MCMC samples per burst
   thin: 20  # Thin MCMC samples every `thin` iterations
   num_adaptation_iterations: 1000
   initial_rates:
     ei: 0.5
-    ir: 0.37
+    ir: 0.5
 
 ThinPosterior:  # Post-process further chain thinning HDF5 -> .pkl.
   start: -10000 
