--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ enum34 = "1.1.8"
 mapclassify = "^2.4.2"
 dhaconfig = {git = "https://gitlab.com/achale/dhaconfig.git", tag="v0.0.2"}
 covid19uk = {git = "https://gitlab.com/chicas-covid19/covid19uk.git", tag="v0.8.0-alpha.5"}
+nodejs = "^0.1.1"
+npm = "^0.1.1"
 
 [tool.poetry.dev-dependencies]
 jedi = "^0.17.2"
