--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
 name = "covid-pipeline"
-version = "0.2.0"
+version = "0.2.1"
 description = "COVID19 daily production"
 authors = ["Chris Jewell <c.jewell@lancaster.ac.uk>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = ">=3.8.0,<3.11"
 xarray = {extras = ["netcdf4"], version = "^0.17.0"}
 s3fs = "^2021.04.0"
 ruffus = "^2.8.4"
@@ -16,7 +16,7 @@ descartes = "^1.1.0"
 enum34 = "1.1.8"
 mapclassify = "^2.4.2"
 dhaconfig = {git = "https://gitlab.com/achale/dhaconfig.git", tag="v0.0.2"}
-covid19uk = {git = "https://gitlab.com/chicas-covid19/covid19uk.git", tag="v0.9.0"}
+covid19uk = {git = "https://gitlab.com/chicas-covid19/covid19uk.git", tag="v0.9.2"}
 nodejs = "^0.1.1"
 npm = "^0.1.1"
 
