--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = ">=3.8.0,<3.11"
-xarray = {extras = ["netcdf4"], version = "^0.17.0"}
 s3fs = "^2021.04.0"
 ruffus = "^2.8.4"
 openpyxl = "^3.0.7"
@@ -19,6 +18,7 @@ dhaconfig = {git = "https://gitlab.com/achale/dhaconfig.git", tag="v0.0.2"}
 covid19uk = {git = "https://gitlab.com/chicas-covid19/covid19uk.git", tag="v0.9.2"}
 nodejs = "^0.1.1"
 npm = "^0.1.1"
+xarray = "^2022.3.0"
 
 [tool.poetry.dev-dependencies]
 jedi = "^0.17.2"
